fix z-index issues, update state parameters for shorter naming

--- a/client/assets/sass/search.scss
+++ b/client/assets/sass/search.scss
@@ -49,3 +49,11 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.leaflet-top, .leaflet-bottom{
+  z-index: 0;
+}
+
+.footer{
+  z-index: 10;
+}
